# speclang

./: Cargo.toml  README.md  go.mod  go.sum  notes.spec  numbers.spec  speclang.go  todo
REPL/: package-lock.json  package.json
REPL/src/components/: Parser.svelte  REPL.svelte  Tester.svelte
REPL/src/routes/: index.svelte
_spec/: 2d.spec  notes.spec
adapter/javascript/: .eslintrc.cjs  README.md  env.d.ts  package-lock.json  package.json  tsconfig.json  vite.config.js
adapter/javascript/src/: $.ts  compose.ts  constants.ts  context.ts  define.ts  definition.ts  dictionary.ts  extend.ts  functions.ts  identify.ts  identify.tsX  index.ts  language.ts  lookup.ts  main.ts  parse.ts  recognizer.ts  reference.ts  schema.ts  shared.ts  specify.ts  speclang.ts  test.ts  types.ts  utility.ts  vite-env.d.ts
adapter/javascript/test/: context.spec.ts  dictionary.spec.ts  identify.spec.tsX  map.spec.ts  package-lock.json  package.json  primitive.spec.ts  recognizer.spec.ts  specify.spec.ts  specify.spec.tsX  tsconfig.json
adapters/javascript/: package-lock.json
experiment/: main.ts  tsconfig.json
new/: test.ts
spec/: 2d  2d_new  2d_new2  beer  dogs  weekly  weight
src/: context.rs  lexicon.rs  lib.rs  main.rs
src/context/: evaluator.rs  mod.rs  parser.rs
src/evaluator/: mod.rs
src/parser/: context.rs  expression.pest  expression.rs  grammar.pest  hcl.rs  mod.rs  operators.rs  parse.rs  pest.rs  specific.rs
src/specific/: mod.rs
src/speclang/: dictionary.rs  lexicon.rs  types.rs
src/test/: define.rs  parse.rs  shared.rs
src/validator/: mod.rs
(+48 files in other folders)
