[package]
name = "speclang"
version = "0.1.0"
description = "This library understands Specific Language"
repository = "https://github.com/Specific-Language"
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
regex = "1"
hcl-rs = "0.12.0"
serde = "1.0.137"
serde_json = "1.0.81"
wasm-bindgen = "0.2.83"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
