[package]
name = "speclang"
version = "0.1.0"
description = "This library understands Specific Language"
repository = "https://github.com/Specific-Language"
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
regex = "1.0"
pest = "2.7"
pest_derive = "2.7"
hcl-rs = "0.16"
serde = "1.0"
serde_json = "1.0"
wasm-bindgen = "0.2"
lazy_static = "1.4"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
